# LibStack

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  build-openssl.bat  build.bat  build_configure.sh
.github/workflows/: 2-in-1-build.yml  linux-build.yml  windows-build.yml
scripts/linux/: build.sh  build_cmake-all.sh  build_cmake.sh
scripts/win/: build-cmake-all.bat  build-openssl.bat
src/: CMakeLists.txt  Hypodermic-2.5.3.patch
